@@ -2,8 +2,6 @@
 <project-private xmlns="http://www.netbeans.org/ns/project-private/1">
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
-        <group>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/view/ObsDrug.java</file>
-        </group>
+        <group/>
     </open-files>
 </project-private>
